# flat-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
examples/demo/: record.py
flat/: grammars.py  types.py  typing.py
flat/backend/: lang.py  rewrite.py
flat/grammar/: ast.py  diagnostics.py  parsers.py
flat/lang/: ast.py  diagnostics.py  parsing.py  translation.py
flat/py/: __init__.py  annot_eval.py  ast_factory.py  ast_helpers.py  checker.py  compile_time.py  diagnostics.py  grammar.py  instrumentation.py  instrumentor.py  parser.py  runtime.py  semantics.py  trans.py  type_analysis.py  type_trees.py  types.py
src/flat/backend/: lang.py
src/flat/py/: __init__.py  __main__.py  analyzer.py  ast_helpers.py  checker.py  compile_time.py  diagnostics.py  grammar.py  parser.py  rt.py  runtime.py  shared.py
test/: test_analyzer.py  test_checker.py  test_instrumentation.py  test_parser.py  test_parsing.py  test_translation.py  test_type_analysis.py
test-examples/: contracts.py  fuzz_literal.py  literal.py
test-examples/negative/: bad_annot.py  bad_assign.py  bad_types.py
tests/: test_analyzer.py  test_checker.py  test_lang.py  test_parser.py  test_producer.py
